--- a/DotNetAppSqlDb/Web.config
+++ b/DotNetAppSqlDb/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="MyDbConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MyDatabaseContext-12.mdf" providerName="System.Data.SqlClient"/>
+    <add name="MyDbConnection" connectionString=Data Source=tcp:mysqlserverfryqltjpd2pz6.database.windows.net,1433;Initial Catalog=mydbfryqltjpd2pz6;User Id=sqladmin@mysqlserverfryqltjpd2pz6;Password=Pa$$w0rd1234;
+/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
